# paq1-lib-error-handler

./: Cargo.toml  readme.md
src/: lib.rs  prelude.rs
src/data/: combine.rs  error_with_code.rs  mod.rs  result_err.rs
tests/unit_tests/data/: combine_test.rs  error_builder_test.rs  mod.rs
